// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render colors - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="colors"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="colors_input"
      title="colors"
    >
      <span
        class="emotion-3"
      >
        colors
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="slider-picker emotion-4"
        >
          <div
            style="height: 12px; position: relative;"
          >
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
            >
              <div
                class="hue-horizontal"
                style="padding: 0px 2px; position: relative; height: 100%;"
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style="position: absolute; left: 0%;"
                >
                  <div
                    style="width: 14px; height: 14px; border-radius: 6px; transform: translate(-7px, -1px); background-color: rgb(248, 248, 248); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="margin-top: 20px;"
            >
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(230, 179, 179); cursor: pointer; border-radius: 2px 0 0 2px;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(210, 121, 121); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(191, 64, 64); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(134, 45, 45); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(77, 25, 25); cursor: pointer; border-radius: 0 2px 2px 0;"
                />
              </div>
              <div
                style="clear: both;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="default"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="default_input"
      title="default"
    >
      <span
        class="emotion-3"
      >
        default
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="slider-picker emotion-4"
        >
          <div
            style="height: 12px; position: relative;"
          >
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
            >
              <div
                class="hue-horizontal"
                style="padding: 0px 2px; position: relative; height: 100%;"
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style="position: absolute; left: 0%;"
                >
                  <div
                    style="width: 14px; height: 14px; border-radius: 6px; transform: translate(-7px, -1px); background-color: rgb(248, 248, 248); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="margin-top: 20px;"
            >
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(230, 179, 179); cursor: pointer; border-radius: 2px 0 0 2px;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(210, 121, 121); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(191, 64, 64); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(134, 45, 45); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(77, 25, 25); cursor: pointer; border-radius: 0 2px 2px 0;"
                />
              </div>
              <div
                style="clear: both;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render defaultColor - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="defaultColor"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="defaultColor_input"
      title="defaultColor"
    >
      <span
        class="emotion-3"
      >
        defaultColor
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="slider-picker emotion-4"
        >
          <div
            style="height: 12px; position: relative;"
          >
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
            >
              <div
                class="hue-horizontal"
                style="padding: 0px 2px; position: relative; height: 100%;"
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style="position: absolute; left: 32.22222222222223%;"
                >
                  <div
                    style="width: 14px; height: 14px; border-radius: 6px; transform: translate(-7px, -1px); background-color: rgb(248, 248, 248); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="margin-top: 20px;"
            >
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(179, 179, 179); cursor: pointer; border-radius: 2px 0 0 2px;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(121, 121, 121); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(64, 64, 64); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(45, 45, 45); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(25, 25, 25); cursor: pointer; border-radius: 0 2px 2px 0;"
                />
              </div>
              <div
                style="clear: both;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render inputStyle - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
  border: 3px solid blue;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="inputStyle"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="inputStyle_input"
      title="inputStyle"
    >
      <span
        class="emotion-3"
      >
        inputStyle
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="slider-picker emotion-4"
        >
          <div
            style="height: 12px; position: relative;"
          >
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
            >
              <div
                class="hue-horizontal"
                style="padding: 0px 2px; position: relative; height: 100%;"
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style="position: absolute; left: 0%;"
                >
                  <div
                    style="width: 14px; height: 14px; border-radius: 6px; transform: translate(-7px, -1px); background-color: rgb(248, 248, 248); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="margin-top: 20px;"
            >
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(230, 179, 179); cursor: pointer; border-radius: 2px 0 0 2px;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(210, 121, 121); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(191, 64, 64); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(134, 45, 45); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(77, 25, 25); cursor: pointer; border-radius: 0 2px 2px 0;"
                />
              </div>
              <div
                style="clear: both;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render label-disabled - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="label-disabled"
>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="slider-picker emotion-1"
        >
          <div
            style="height: 12px; position: relative;"
          >
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
            >
              <div
                class="hue-horizontal"
                style="padding: 0px 2px; position: relative; height: 100%;"
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style="position: absolute; left: 0%;"
                >
                  <div
                    style="width: 14px; height: 14px; border-radius: 6px; transform: translate(-7px, -1px); background-color: rgb(248, 248, 248); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="margin-top: 20px;"
            >
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(230, 179, 179); cursor: pointer; border-radius: 2px 0 0 2px;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(210, 121, 121); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(191, 64, 64); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(134, 45, 45); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(77, 25, 25); cursor: pointer; border-radius: 0 2px 2px 0;"
                />
              </div>
              <div
                style="clear: both;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render title - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="title"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="title_input"
      title="The color selector"
    >
      <span
        class="emotion-3"
      >
        The color selector
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="slider-picker emotion-4"
        >
          <div
            style="height: 12px; position: relative;"
          >
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
            >
              <div
                class="hue-horizontal"
                style="padding: 0px 2px; position: relative; height: 100%;"
              >
                <style>
                  
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                </style>
                <div
                  style="position: absolute; left: 0%;"
                >
                  <div
                    style="width: 14px; height: 14px; border-radius: 6px; transform: translate(-7px, -1px); background-color: rgb(248, 248, 248); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="margin-top: 20px;"
            >
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(230, 179, 179); cursor: pointer; border-radius: 2px 0 0 2px;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(210, 121, 121); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(191, 64, 64); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(134, 45, 45); cursor: pointer;"
                />
              </div>
              <div
                style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
              >
                <div
                  style="height: 12px; background: rgb(77, 25, 25); cursor: pointer; border-radius: 0 2px 2px 0;"
                />
              </div>
              <div
                style="clear: both;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Schema colors 1`] = `true`;

exports[`Test Schema colors 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema defaultColor 1`] = `true`;

exports[`Test Schema defaultColor 2`] = `null`;

exports[`Test Schema inputStyle 1`] = `true`;

exports[`Test Schema inputStyle 2`] = `null`;

exports[`Test Schema label-disabled 1`] = `true`;

exports[`Test Schema label-disabled 2`] = `null`;

exports[`Test Schema title 1`] = `true`;

exports[`Test Schema title 2`] = `null`;
